--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p style="color:#444; line-height:1.6;">
             <!-- You can put any free string here -->
             <!--#echo var="free_text" -->
-            This is my free writing
+            This is nischal pradhan
         </p>
     </div>
     </div>
